--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.3.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
+    "socket.io": "^4.7.2",
     "speakeasy": "^2.0.0"
   }
 }
